--- a/src/components/styles/WhatIDo.css
+++ b/src/components/styles/WhatIDo.css
@@ -107,6 +107,10 @@
 
 /* Responsive queries */
 @media only screen and (max-width: 1024px) {
+  .whatIDO {
+    height: auto !important;
+    padding: 40px 0px;
+  }
   .what-box:first-child {
     width: 35%;
   }
@@ -124,8 +128,8 @@
 @media only screen and (max-width: 768px) {
   .whatIDO {
     flex-direction: column;
-    height: auto;
-    padding: 80px 0px;
+    height: auto !important;
+    padding: 30px 0px;
     align-items: flex-start;
     gap: 30px;
   }
